[project]
name = "mlsys-agents"
version = "0.1.0"
description = "Agent-native utilities for ML systems research and engineering: academic plotting, GPU benchmarking, profiling, etc."
readme = "README.md"
authors = [
  { name = "Zhanda Zhu", email = "zhandazhu@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
  "matplotlib>=3.9",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
  "pre-commit",
  "pytest>=8.0",
  "ruff",
]

[project.urls]
Homepage = "https://github.com/zhandaz/mlsys-agents"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mlsys_agents*"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
lint.select = ["ALL"]
lint.ignore = [
  "ANN002",  # Missing type annotation for `*args`
  "ANN003",  # Missing type annotation for `**kwargs`
  "C901",    # Function complexity too high
  "COM812",  # Trailing comma missing
  "D105",    # Missing docstring in magic method
  "D107",    # Missing docstring in __init__
  "EM101",   # Exception must not use a string literal
  "EM102",   # Exception must not use an f-string literal
  "FBT001",  # Boolean-typed positional argument
  "FBT002",  # Boolean default positional argument
  "FIX002",  # Line contains TODO
  "G004",    # f-string in logging
  "PLR0912", # Too many branches (chart functions have many options)
  "PLR0913", # Too many arguments in function definition
  "PLR2004", # Magic value used in comparison (layout thresholds)
  "SIM108",  # Use ternary operator (less readable for isinstance branches)
  "T201",    # Print found
  "TD002",   # Missing author in TODO
  "TD003",   # Missing issue number in TODO
  "TRY003",  # Long messages outside exception class
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "ANN",     # Type annotations not needed in tests
  "D",       # Docstrings not needed in tests
  "E402",    # Module-level import not at top (matplotlib.use before imports)
  "ICN001",  # Import convention
  "INP001",  # Implicit namespace package
  "PT001",   # pytest.fixture parentheses style
  "RUF059",  # Unused unpacked variable (fig, ax pattern)
  "RUF100",  # Unused noqa directives
  "S101",    # assert usage
]

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
